# fzi_geometry_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: MetaPoseStamped.msg  MetaPoseWithCovariance.msg  MetaPoseWithCovarianceStamped.msg  PointWithCovariance.msg  Trajectory.msg  TrajectoryArray.msg  TrajectoryArraySequence.msg  TrajectoryWithCovariance.msg
